--- a/carrinho2.html
+++ b/carrinho2.html
@@ -1,3 +1,5 @@
+<!--Quando inicia o site os produtos fica por cima da mensagem de bem vindo. PRECISA ARRUMAR-->
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -5,12 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu site beta</title>
     <!--- COLOCAR O LINK DE INTEGRAO COM CSS-->
-    <link rel="stylesheet" href="estilocarrinho.css">
-    <link rel="stylesheet" href="animacoes.css">
-    <script src="addcompras.js" defer></script>
+    <link rel="stylesheet" href="TodasF.css">
 </head>
 <body>
 
+    <button id="modo-dark" onclick="alternarModo()"> Alternar Modo</button>
+      <!-- Tela de boas-vindas -->
+    <div id="tela-boas-vindas">
+        <link rel="stylesheet" href="transicao.css">
+        <h1>Bem-vindo à Minha Loja!</h1>
+    </div>
+
+    <input type="text" id="pesquisa" placeholder="Buscar prosutos..." onkeyup="filtrarProdutos()">
     <header>
         <h1>Minha loja com carrinho</h1>
     </header>
@@ -18,30 +26,73 @@
     <main>
         <section class="Produtos">
             <h2>Produtos</h2>
-            <div class="grid">
-                <article class="produto" draggable="true" ondragstart="iniciarArraste(event)">
-                    <img src="produto1.jpg" alt="Produto 1">
-                    <h3> Produto 1</h3>
-                    <p>R$300,00</p>
-                    <button onclick="adicionarAoCarrinho('Produto 1', 300)"></button>
-                </article> 
-                <article class="produto" draggable="true" ondragstart="iniciarArraste(event)">
-                    <img src="produto1.jpg" alt="Produto 2">
-                    <h3> Produto 2</h3>
-                    <p>R$35,00</p>
-                    <button onclick="adicionarAoCarrinho('Produto 2', 35)"></button>
-                </article>
-             </div>
+            <div class="slider">
+                <div class="slides">
+                    <article class="produto" draggable="true" ondragstart="iniciarArraste(event)">
+                        <img src="https://a-static.mlcdn.com.br/1500x1500/geladeira-brastemp-frost-free-duplex-375-litros-com-compartimento-extrafrio/whirlpool/2004475/38907e96095ff71608b11b161f79396b.jpg" alt="geladeira" class="imagem-produto">
+                        <h3>geladeira</h3>
+                        <p>R$1.500,00</p>
+                        <button onclick="adicionarAoCarrinho('geladeira', 1500)">Adicionar ao carrinho</button>
+                    </article>
+
+                    <article class="produto" draggable="true" ondragstart="iniciarArraste(event)">
+                        <img src="https://a-static.mlcdn.com.br/1500x1500/geladeira-brastemp-frost-free-duplex-375-litros-com-compartimento-extrafrio/whirlpool/2004475/38907e96095ff71608b11b161f79396b.jpg" alt="geladeira" class="imagem-produto">
+                        <h3>geladeira</h3>
+                        <p>R$1.500,00</p>
+                        <button onclick="adicionarAoCarrinho('geladeira', 1500)">Adicionar ao carrinho</button>
+                    </article>
+
+                    <article class="produto" draggable="true" ondragstart="iniciarArraste(event)">
+                        <img src="https://a-static.mlcdn.com.br/1500x1500/geladeira-brastemp-frost-free-duplex-375-litros-com-compartimento-extrafrio/whirlpool/2004475/38907e96095ff71608b11b161f79396b.jpg" alt="geladeira" class="imagem-produto">
+                        <h3>geladeira</h3>
+                        <p>R$1.500,00</p>
+                        <button onclick="adicionarAoCarrinho('geladeira', 1500)">Adicionar ao carrinho</button>
+                    </article>
+
+                    <article class="produto" draggable="true" ondragstart="iniciarArraste(event)">
+                        <img src="https://a-static.mlcdn.com.br/1500x1500/geladeira-brastemp-frost-free-duplex-375-litros-com-compartimento-extrafrio/whirlpool/2004475/38907e96095ff71608b11b161f79396b.jpg" alt="geladeira" class="imagem-produto">
+                        <h3>geladeira</h3>
+                        <p>R$1.500,00</p>
+                        <button onclick="adicionarAoCarrinho('geladeira', 1500)">Adicionar ao carrinho</button>
+                    </article>
+
+                    <article class="produto" draggable="true" ondragstart="iniciarArraste(event)">
+                        <img src="https://a-static.mlcdn.com.br/1500x1500/geladeira-brastemp-frost-free-duplex-375-litros-com-compartimento-extrafrio/whirlpool/2004475/38907e96095ff71608b11b161f79396b.jpg" alt="geladeira" class="imagem-produto">
+                        <h3>geladeira</h3>
+                        <p>R$1.500,00</p>
+                        <button onclick="adicionarAoCarrinho('geladeira', 1500)">Adicionar ao carrinho</button>
+                    </article>
+
+                    <article class="produto" draggable="true" ondragstart="iniciarArraste(event)">
+                        <img src="https://a-static.mlcdn.com.br/1500x1500/geladeira-brastemp-frost-free-duplex-375-litros-com-compartimento-extrafrio/whirlpool/2004475/38907e96095ff71608b11b161f79396b.jpg" alt="geladeira" class="imagem-produto">
+                        <h3>geladeira</h3>
+                        <p>R$1.500,00</p>
+                        <button onclick="adicionarAoCarrinho('geladeira', 1500)">Adicionar ao carrinho</button>
+                    </article>
+
+                    <article class="produto" draggable="true" ondragstart="iniciarArraste(event)">
+                        <img src="https://a-static.mlcdn.com.br/1500x1500/geladeira-brastemp-frost-free-duplex-375-litros-com-compartimento-extrafrio/whirlpool/2004475/38907e96095ff71608b11b161f79396b.jpg" alt="geladeira" class="imagem-produto">
+                        <h3>geladeira</h3>
+                        <p>R$1.500,00</p>
+                        <button onclick="adicionarAoCarrinho('geladeira', 1500)">Adicionar ao carrinho</button>
+                    </article>
+                </div>
+
+                <button class="prev" onclick="mudarSlide(-1)"><</button>
+                <button class="next" onclick="mudarSlide(1)">></button>
+
+            </div>
+
         </section>
         <!-- CArrinho-->
         <section class="carrinho"  ondragover="permitirSoltar(event)" ondrop="soltarNoCarrinho(event)">
             <h2>Seu carrinho</h2>
             <ul id="lista-carrinho"></ul>
-            <p>Total: <span id="total">R$0,00</span></p>
+            <p>Total: <span id="total">R$</span></p>
             <button onclick="confirmarCompra()">Confirmar Compra</button>
         </section>
     </main>
     
-    <script src="script.js"></script>
+    <script src="addcompras.js" defer></script>
 </body>
 </html>
