--- a/confirmacao.html
+++ b/confirmacao.html
@@ -15,7 +15,7 @@
 
     <main>
         <p>Obrigado por comprar conosco! Seu pedido foi processado com sucesso!</p>
-        <a href="index.html">Voltar para loja</a>
+        <a href="carrinho2.html">Voltar para loja</a>
     </main>
     
 </body>
