--- a/carrinho2.html
+++ b/carrinho2.html
@@ -32,55 +32,55 @@
                     <article class="produto" draggable="true" ondragstart="iniciarArraste(event)">
                         <img src="https://a-static.mlcdn.com.br/1500x1500/geladeira-brastemp-frost-free-duplex-375-litros-com-compartimento-extrafrio/whirlpool/2004475/38907e96095ff71608b11b161f79396b.jpg" alt="geladeira" class="imagem-produto">
                         <h3>geladeira</h3>
-                        <p>R$1.500,00</p>
+                        <p>R$2.500,00</p>
                         <button onclick="adicionarAoCarrinho('geladeira', 1500)">Adicionar ao carrinho</button>
                     </article>
 
                     <article class="produto" draggable="true" ondragstart="iniciarArraste(event)">
-                        <img src="https://a-static.mlcdn.com.br/1500x1500/geladeira-brastemp-frost-free-duplex-375-litros-com-compartimento-extrafrio/whirlpool/2004475/38907e96095ff71608b11b161f79396b.jpg" alt="geladeira" class="imagem-produto">
-                        <h3>geladeira</h3>
-                        <p>R$1.500,00</p>
+                        <img src="https://a-static.mlcdn.com.br/1500x1500/notebook-lenovo-ideapad-330-intel-core-i5-8gb-1tb-156-windows-10/magazineluiza/220970900/f5766a7e7dc9112d9941c7b0e225a493.jpg" alt="geladeira" class="imagem-produto">
+                        <h3>Notebook</h3>
+                        <p>R$1.900,00</p>
                         <button onclick="adicionarAoCarrinho('geladeira', 1500)">Adicionar ao carrinho</button>
                     </article>
 
                     <article class="produto" draggable="true" ondragstart="iniciarArraste(event)">
-                        <img src="https://a-static.mlcdn.com.br/1500x1500/geladeira-brastemp-frost-free-duplex-375-litros-com-compartimento-extrafrio/whirlpool/2004475/38907e96095ff71608b11b161f79396b.jpg" alt="geladeira" class="imagem-produto">
-                        <h3>geladeira</h3>
-                        <p>R$1.500,00</p>
+                        <img src="https://th.bing.com/th/id/OIP.aIfpWlBEvkEX-l7wnTnHpwHaHa?w=250&h=250&c=8&rs=1&qlt=90&o=6&dpr=1.3&pid=3.1&rm=2" alt="geladeira" class="imagem-produto">
+                        <h3>fogao</h3>
+                        <p>R$2.000,00</p>
                         <button onclick="adicionarAoCarrinho('geladeira', 1500)">Adicionar ao carrinho</button>
                     </article>
 
                     <article class="produto" draggable="true" ondragstart="iniciarArraste(event)">
-                        <img src="https://a-static.mlcdn.com.br/1500x1500/geladeira-brastemp-frost-free-duplex-375-litros-com-compartimento-extrafrio/whirlpool/2004475/38907e96095ff71608b11b161f79396b.jpg" alt="geladeira" class="imagem-produto">
-                        <h3>geladeira</h3>
-                        <p>R$1.500,00</p>
+                        <img src="https://th.bing.com/th/id/OIP.2Lh_CIapAk1KN6ijeKG4NwHaFj?w=272&h=204&c=7&r=0&o=7&cb=iwp2&dpr=1.3&pid=1.7&rm=3" alt="geladeira" class="imagem-produto">
+                        <h3>sofa</h3>
+                        <p>R$1.890,00</p>
                         <button onclick="adicionarAoCarrinho('geladeira', 1500)">Adicionar ao carrinho</button>
                     </article>
 
                     <article class="produto" draggable="true" ondragstart="iniciarArraste(event)">
-                        <img src="https://a-static.mlcdn.com.br/1500x1500/geladeira-brastemp-frost-free-duplex-375-litros-com-compartimento-extrafrio/whirlpool/2004475/38907e96095ff71608b11b161f79396b.jpg" alt="geladeira" class="imagem-produto">
-                        <h3>geladeira</h3>
-                        <p>R$1.500,00</p>
+                        <img src="https://th.bing.com/th/id/OIP.ab9zp_a0DZTkGatWdjwlcAHaFj?w=238&h=180&c=7&r=0&o=7&cb=iwp2&dpr=1.3&pid=1.7&rm=3" alt="geladeira" class="imagem-produto">
+                        <h3>mesa</h3>
+                        <p>R$1.300,00</p>
                         <button onclick="adicionarAoCarrinho('geladeira', 1500)">Adicionar ao carrinho</button>
                     </article>
 
                     <article class="produto" draggable="true" ondragstart="iniciarArraste(event)">
-                        <img src="https://a-static.mlcdn.com.br/1500x1500/geladeira-brastemp-frost-free-duplex-375-litros-com-compartimento-extrafrio/whirlpool/2004475/38907e96095ff71608b11b161f79396b.jpg" alt="geladeira" class="imagem-produto">
-                        <h3>geladeira</h3>
-                        <p>R$1.500,00</p>
+                        <img src="https://th.bing.com/th/id/OIP.NH1ToFBg0xYEgKjfBvkKjAHaHa?w=194&h=194&c=7&r=0&o=7&cb=iwp2&dpr=1.3&pid=1.7&rm=3" alt="geladeira" class="imagem-produto">
+                        <h3>celular</h3>
+                        <p>R$9.500,00</p>
                         <button onclick="adicionarAoCarrinho('geladeira', 1500)">Adicionar ao carrinho</button>
                     </article>
 
                     <article class="produto" draggable="true" ondragstart="iniciarArraste(event)">
-                        <img src="https://a-static.mlcdn.com.br/1500x1500/geladeira-brastemp-frost-free-duplex-375-litros-com-compartimento-extrafrio/whirlpool/2004475/38907e96095ff71608b11b161f79396b.jpg" alt="geladeira" class="imagem-produto">
-                        <h3>geladeira</h3>
+                        <img src="https://th.bing.com/th/id/OIP.mTsofR1j3lVGHICoUaeOSAHaHa?w=206&h=206&c=7&r=0&o=7&cb=iwp2&dpr=1.3&pid=1.7&rm=3" alt="geladeira" class="imagem-produto">
+                        <h3>maquina de lavar</h3>
                         <p>R$1.500,00</p>
                         <button onclick="adicionarAoCarrinho('geladeira', 1500)">Adicionar ao carrinho</button>
                     </article>
                 </div>
 
-                <button class="prev" onclick="mudarSlide(-1)"></button>
-                <button class="next" onclick="mudarSlide(1)"></button>
+                <button class="seta-esquerda" onclick="mudarSlide(-1)">&#10094;</button>
+                <button class="seta-direita" onclick="mudarSlide(1)">&#10095;</button>
 
             </div>
 
